mo composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-   "name": "syoubin/XiaoYuSDK",
+   "name": "syoubin/xiao-yu-sdk",
    "description": "小鱼易连云端REST接口的PHP实现",
    "keywords": [
       "小鱼易连",
